# shanmukh-polling-application

backend/: .env  .gitignore  Cargo.toml
backend/src/: main.rs  mongodb_repository.rs  repositories.rs
backend/src/handlers/: poll.rs  user.rs  vote.rs  websocket.rs
backend/src/models/: poll.rs  vote.rs
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/_utils/: Provider.tsx  nodeSdk.ts  useWebSocket.ts
frontend/app/components/: PollResultGraph.tsx  PollStatistics.tsx
frontend/app/profile/: CreatePollForm.tsx  PollList.tsx  component.tsx  page.tsx
frontend/app/profile/all-polls/[poll_id]/: page.tsx
frontend/app/profile/create-poll/: page.tsx
frontend/app/profile/my-polls/: page.tsx
frontend/app/profile/my-votes/: page.tsx
