[package]
name = "fairpolling-backend"
version = "0.1.0"
edition = "2021"

[dependencies]  # or actix-web if preferred
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"  # For loading environment variables
tower = "0.5.1"
reqwest = { version = "0.12.8", features = ["json"] }
actix-web = "4.9.0"
serde_json = "1.0.128"
futures = "0.3.31"
actix-cors = "0.7.0"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
